--- a/package.json
+++ b/package.json
@@ -7,7 +7,7 @@
     "doc": "docs"
   },
   "scripts": {
-    "start": "nodemon app.js"
+    "dev": "nodemon app.js"
   },
   "author": "Sanjiv Paul",
   "license": "ISC",
@@ -18,5 +18,8 @@
     "express": "^4.18.1",
     "mongoose": "^6.6.3",
     "multer": "^1.4.5-lts.1"
+  },
+  "devDependencies": {
+    "nodemon": "^3.1.10"
   }
 }
